# utility

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  makedocs.ps1
cmake/: run_doxygen.cmake  run_sphinx.cmake
docs/: CMakeLists.txt
docs/Sphinx/: conf.py.in
docs/Sphinx/source/: conf.py  index.rst
docs/Sphinx/source/API/: ANSI.rst  concepts.rst  exceptions.rst  integer.rst  interval.rst  iterable.rst  string.rst
include/: ANSI.h  Logger.h  common.h
include/utility/: Logger.h  common.h
src/: Logger.cpp  common.cpp
tests/: CMakeLists.txt  iterable.cpp  testIncludes.h  tests.cpp  toString.cpp
